# aoc

./: .gitignore  README.md  init.py
include/: SolverTemplate.hpp
templates/: Makefile  Solver.cpp  Solver.hpp  SolverTestSuite.hpp  solver.cpp  solver.hpp  solver.hs  solver.py  test.py  test_solver.py
templates/cpp/: Main.cpp  Makefile  SolverTestSuite.hpp
templates/hs/: solver.hs
templates/jl/: Solver.jl  solver.jl
templates/py/: solver.py
utils/: Utils.cpp  Utils.hpp  Utils.hs  UtilsTestSuite.hpp
utils/cpp/: Makefile  Utils.cpp  Utils.hpp
utils/hs/: AoC.hs  Geometry.hs  Utils.hs
utils/jl/: AoC.jl  Manifest.toml  Project.toml  Utils.jl
utils/jl/src/: AoC.jl  Geometry.jl  Graphs.jl  Utils.jl
utils/py/: README.md  pyproject.toml  runner.py  utils.py
utils/py/aoc/: utils.py
utils/py/src/aoc/: __init__.py  algos.py  cli.py  data.py  geometry.py  utils.py
