[project]
name = "aoc"
version = "0.1.0"
description = "utilities for aoc"
readme = "README.md"
authors = [
    { name = "David Koch", email = "dvkch@proton.me" }
]
requires-python = ">=3.10"
dependencies = [
    "chardet>=5.2.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
